--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "formidable": "^3.5.4",
     "multer": "^2.0.2"
   }
 }
